@@ -44,11 +44,12 @@ group = "com.obsidiandynamics.warthog"
 version = packageVersion
 
 def baseJvmArgs = [
-  "--illegal-access=warn",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
   "--add-opens=java.base/java.lang=ALL-UNNAMED",
   "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
   "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
   "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
   "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
   "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
   "-XX:-MaxFDLimit",
